@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Try to fix disappearing dragon abilities when converting to a god.
+Nicolas Weeger 2009-12-12
+
 Track how many ticks the character has been played.  Piece of information
 tracking easy to add in.  Output is shown in the statistics command.
 MSW 2009-12-07
